tests/NormalTests/paczka1/fuzzy1/35472301.err
Error in line 1: 9eu1ZaHGrWv S920 65,0
Error in line 4: 9eu1ZaHGrWv S89 31,5
Error in line 5: 9eu1ZaHGrWv S920 44,5
Error in line 8: 9eu1ZaHGrWv S65 3,8
Error in line 10: 9eu1ZaHGrWv S89 84,2
Error in line 19: 9IcJzx S920 51,6
Error in line 28: Cuq7O S89 44,4
Error in line 34: A826 S65 121,7
